--- a/SistemaDeventas/nbproject/project.properties
+++ b/SistemaDeventas/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaDeventas
+application.vendor=josca
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/SistemaDeventas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaDeventas
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\josca\\Downloads\\mysql-connector-j-9.1.0 (1)\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=src\\conector\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
@@ -43,7 +46,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.mysql-connector-j-9.1.0.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
